--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-svg": "^15.1.0"
   },
   "devDependencies": {
