--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^3.0.5",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-test-renderer": "^18.0.7",
     "react-native-dotenv": "^3.4.11",
-    "typescript": "^5.1.3"
+    "typescript": "^5.4.3"
   },
   "private": true
 }
