--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~50.0.14",
+    "expo-blur": "^12.9.2",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.10.0",
     "react": "18.2.0",
