--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-async-storage/root": "github:react-native-async-storage/async-storage",
     "@react-native-community/blur": "^4.4.0",
-    "@react-native-community/datetimepicker": "^7.6.3",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -30,7 +30,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-simple-toast": "^3.3.1",
-    "react-native-svg": "^15.1.0",
+    "react-native-svg": "14.1.0",
     "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
