--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-async-storage/root": "github:react-native-async-storage/async-storage",
     "@react-native-community/blur": "^4.4.0",
-    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-community/datetimepicker": "^7.6.1",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
